<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_e"
        android:text="@string/text_language"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/lan_spinner"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/set_lan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_setup"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_e"
        android:text="@string/text_code"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rg_lan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_codepage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="codepage"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rb_utf"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="utf-8" />

            <RadioButton
                android:id="@+id/rb_unicode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="unicode" />

        </RadioGroup>

        <Button
            android:id="@+id/set_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_setup"/>
    </LinearLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_unicode_out"/>

</LinearLayout>